Fix cannot initialize pd if using ipv6 address (#587)